# scikit-map

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  00-extract_samples.py  01-merge_samples.py  02-ard2-overlay.py  03-train-model.py  04-predict_tiles.py  05-predict_prod_cpp.py  05-run_prediction.py  CATALOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Landsat_ARCO_0.ipynb  Landsat_ARCO_1.ipynb  Modeling.ipynb  NEWS.md  README.html  README.md  accum_ecostac.py  child.py  conda_env.yml  create_masked_gaps_comulative.ipynb  create_masked_ndvi.ipynb  eumap.Rproj  gen_dataset.py  gen_toy.py  load_pixel_ts.ipynb  mask_gpp.py  monolitic_predictions.ipynb  nb_run_prediction.ipynb  performance_comparison.ipynb  predict_api.py  requirements.txt  run_prediction.py  run_prediction_cpp.py  run_properties.py  run_soil_types.py  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
R-package/: DESCRIPTION  NAMESPACE  README.md  accuracy.plot.spm.fnc.R  predict.spm.fnc.R  train.spm.R  train.spm.fnc.R
benchmarks/: sampling.ipynb
build_tools/: build_docs.sh  update_fallback_catalogue.py
csv/: adm_county_nuts.osm_c_30m_0..0cm_2021_eumap_epsg3035_v0.1.csv
docker/: Dockerfile  README.md  build-all.sh  docker-compose.yml  requirements.txt
docs/: README.md  api.rst  conf.py  environment.yml  index.rst  tutorials.rst  (+1 more)
skmap_bindings/: CMakeCache.txt  CMakeLists.txt  misc.cpp
skmap_bindings/include/: ParArray.h
skmap_bindings/include/io/: IoArray.h
skmap_bindings/src/: misc.cpp  skmap_bindings.cpp
skmap_bindings/src/io/: IoArray.cpp
skmap_bindings/src/transform/: TransArray.cpp
(+356 files in other folders)
